--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
             transform: translateY(-10px);
             transition: all 0.3s ease;
         }
+
+        a {
+            color: #ffd700;
+            font-weight: bold;
+            text-decoration: none;
+            transition: color 0.3s ease, text-decoration 0.3s ease;
+        }
+
+        a:hover {
+            color: #ffa500;
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -61,12 +73,12 @@
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
                 contributions.</p>
-            <p, style="background-color: rgba(110, 110, 110, 0.623);padding: 5px;"> Contact me: <a href="
-                mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
+            <p style="background-color: rgba(110, 110, 110, 0.623); padding: 5px;"> Contact me: <a
+                    href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
                     href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
-                <a href="media/Resume_Dodge.pdf" class="btn btn-light mt-3" target="_blank">View Resume</a>
+            <a href="media/Resume_Dodge.pdf" class="btn btn-light mt-3" target="_blank">View Resume</a>
         </div>
     </header>
     <section class="project mb-5">
