--- a/index.html
+++ b/index.html
@@ -51,15 +51,21 @@
         }
 
         a {
-            color: #ffd700;
+            color: #f0f0f0;
             font-weight: bold;
             text-decoration: none;
             transition: color 0.3s ease, text-decoration 0.3s ease;
         }
 
         a:hover {
-            color: #ffa500;
+            color: #00bcd4;
             text-decoration: underline;
+        }
+
+        h1.display-4,
+        p.lead,
+        p {
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
     </style>
 </head>
@@ -67,14 +73,14 @@
 <body style="background-color: #464646;" class="bg-light">
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
-            <h1 class="display-4" style="background-color: rgba(110, 110, 110, 0.623); padding: 5px;">Timothy Dodge</h1>
-            <p class="lead" style="background-color: rgba(110, 110, 110, 0.623); padding: 5px;">I am Timothy Dodge, an
+            <h1 class="display-4" style="padding: 5px;">Timothy Dodge</h1>
+            <p class="lead" style="padding: 5px;">I am Timothy Dodge, an
                 engineer with a passion for robotics, control systems, and data
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
                 contributions.</p>
-            <p style="background-color: rgba(110, 110, 110, 0.623); padding: 5px;"> Contact me: <a
-                    href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
+            <p style="padding: 5px;"> Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i
+                        class="fas fa-envelope"></i>
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
                     href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
