--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         h1.display-4,
         p.lead,
         p {
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            text-shadow: 3px 3px 6px rgb(0, 0, 0);
         }
     </style>
 </head>
