changing linked text

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         }
 
         a {
-            color: #f0f0f0;
+            color: #000000;
             font-weight: bold;
             text-decoration: none;
             transition: color 0.3s ease, text-decoration 0.3s ease;
         }
 
         a:hover {
-            color: #00bcd4;
+            color: #06a0a5;
             text-decoration: underline;
         }
 
