changing linked text

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         p.lead,
         p {
             text-shadow: 3px 3px 6px rgb(0, 0, 0);
+            font-weight: bold;
         }
     </style>
 </head>
@@ -74,7 +75,7 @@
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
             <h1 class="display-4" style="padding: 5px;">Timothy Dodge</h1>
-            <p class="text-white" style="padding: 5px;">I am Timothy Dodge, an
+            <p class="lead" style="padding: 5px;">I am Timothy Dodge, an
                 engineer with a passion for robotics, control systems, and data
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
