--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         .card:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
             transform: translateY(-10px);
             transition: all 0.3s ease;
         }
@@ -91,7 +91,8 @@
     <section class="project mb-5">
         <div class="card shadow-sm">
             <div class="card-body">
-                <h2 class="card-title">Sandia National Laboratories: Pursuer-Evader Project</h2>
+                <h2 class="card-title" , style="color: #000000; font-weight: bold;">Sandia National Laboratories:
+                    Pursuer-Evader Project</h2>
                 <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Developed RL models for the pursuer team in pursuer-evader problems in
