--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
     <section class="mb-5">
         <h2>Realtime Data Visualization Tutorials in Matplotlib and ROS2</h2>
         <div class="card">
-            <img src="media/plotting.gif" alt="Realtime data visualization demo" class="card-img-bottom">
+            <img src="media/plotting.gif" alt="Realtime data visualization demo" class="card-img-bottom"
+                style="max-height: 300px; width: auto">
         </div>
     </section>
 
