--- a/index.html
+++ b/index.html
@@ -176,11 +176,16 @@
             </div>
         </div>
     </section>
-    <section class="mb-5">
-        <h2>Realtime Data Visualization Tutorials in Matplotlib and ROS2</h2>
-        <div class="card">
-            <img src="media/plotting.gif" alt="Realtime data visualization demo" class="card-img-bottom"
-                style="max-height: 300px; width: auto">
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="realtime_visualization_tutorial.html"
+                        class="text-decoration-none">Realtime Data Visualization Tutorials using Matplotlib in ROS2</a>
+                </h2>
+                <div class="video mt-4">
+                    <img src="media/plotting.gif" alt="RRT Planner Animation" class="img-fluid" loading="lazy">
+                </div>
+            </div>
         </div>
     </section>
 
