adding color change on hover

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         .card:hover {
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+            background-color: #868686;
             transform: translateY(-10px);
             transition: all 0.3s ease;
         }
