adding new hover effect

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 
         .card:hover {
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-            background-color: #868686;
+            background-color: #d8d8d8ef;
             transform: translateY(-10px);
             transition: all 0.3s ease;
+            filter: brightness(1.1);
+            /* Add a brightness effect for hover discoloration */
         }
 
         a {
