adding page for sandia

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a href="media/Resume_Dodge.pdf" class="btn btn-light mt-3" target="_blank">View Resume</a>
         </div>
     </header>
-    <section class="project mb-5">
+    <!-- <section class="project mb-5">
         <div class="card shadow-sm">
             <div class="card-body">
                 <h2 class="card-title" , style="color: #000000; font-weight: bold;">Sandia National Laboratories:
@@ -105,6 +105,23 @@
                     <li class="list-group-item">Integrated an IMU Simulink model into Rate Table simulations, elevating
                         the precision of rate table dynamics analysis.</li>
                 </ul>
+                <div class="video mt-4">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/TNFQRwU95Wg?autoplay=1&mute=1"
+                        title="YouTube video" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
+                <h2 class="card-title"><a href="sandia_project.html" class="text-decoration-none"
+                        style="color: #000000; font-weight: bold;">Sandia National Laboratories: Pursuer-Evader
+                        Project</a>
+                </h2>
+                <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
                 <div class="video mt-4">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/TNFQRwU95Wg?autoplay=1&mute=1"
                         title="YouTube video" frameborder="0"
