--- a/sandia_project.html
+++ b/sandia_project.html
@@ -20,6 +20,12 @@
             max-width: 600px;
             height: auto;
         }
+
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0 1rem;
+        }
     </style>
 </head>
 
