changing text shadow

--- a/index.html
+++ b/index.html
@@ -66,10 +66,15 @@
         }
 
         h1.display-4,
-        p.lead,
-        p {
+        p.lead {
             text-shadow: 3px 3px 6px rgb(0, 0, 0);
-            font-weight: bold;
+        }
+
+        .card-text {
+            text-shadow: none;
+        }
+
+        font-weight: bold;
         }
     </style>
 </head>
