--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                 <h2 class="card-title"><a href="sandia_project.html" class="text-decoration-none">Sandia National
                         Laboratories: Pursuer-Evader
                         Project</a></h2>
-                <p class="card-text"><strong>Technologies:</strong> Reinforcement Learning, PyTorch, Simulink</p>
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Reinforcement Learning, PyTorch,
+                    Simulink</p>
                 <div class="video mt-4">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/TNFQRwU95Wg?autoplay=1&mute=1"
                         title="YouTube video" frameborder="0"
@@ -119,6 +120,8 @@
                 <h2 class="card-title"><a href="mars_rover.html" class="text-decoration-none">Mars Rover Senior Design
                         Project</a></h2>
                 <div class="video mt-4">
+                    <p class="card-text"><strong>Technologies and Concepts:</strong> Arduino, ROS, C++, Python,
+                        SolidWorks, </p>
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/jd4WxPIJLbY?autoplay=1&mute=1"
                         title="YouTube video" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -131,6 +134,8 @@
     <section class="project mb-5">
         <div class="card shadow-sm">
             <div class="card-body">
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Control Theory, ROS2, Python,TurtleBots
+                </p>
                 <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon
                         Point Controller</a></h2>
                 <div class="video mt-4">
@@ -145,6 +150,8 @@
             <div class="card-body">
                 <h2 class="card-title"><a href="power_consumption_forecasting.html" class="text-decoration-none">Power
                         Consumption Forecasting</a></h2>
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Deep Neural Networks, Machine Learning,
+                    Pytorch, SciKit Learn, Pandas</p>
                 <div class="video mt-4">
                     <img src="figures/results_comparison.png" alt="Power Consumption Forecasting Results"
                         class="img-fluid" loading="lazy">
@@ -156,6 +163,8 @@
     <section class="project mb-5">
         <div class="card shadow-sm">
             <div class="card-body">
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Path Planning, UAV, Python, Search
+                    Algorithms, ROS2</p>
                 <h2 class="card-title"><a href="rrt_planner.html" class="text-decoration-none">UAV RRT* Path Planner</a>
                 </h2>
                 <div class="video mt-4">
@@ -170,6 +179,8 @@
             <div class="card-body">
                 <h2 class="card-title"><a href="simulated_annealing_power_planning.html"
                         class="text-decoration-none">Simulated Annealing Power Planning</a></h2>
+                <p class="card-text"><strong>Technologies and Concepts:</strong> C++, ROS2, Metaheruistic Optimization
+                </p>
                 <div class="video mt-4">
                     <img src="figures/greedy_results.png" alt="Simulated Annealing Power Planning Results"
                         class="img-fluid" loading="lazy">
@@ -183,6 +194,7 @@
                 <h2 class="card-title"><a href="realtime_visualization_tutorial.html"
                         class="text-decoration-none">Realtime Data Visualization Tutorials using Matplotlib in ROS2</a>
                 </h2>
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Python, ROS2, Multi Threading</p>
                 <div class="video mt-4">
                     <img src="media/plotting.gif" alt="RRT Planner Animation" class="img-fluid" loading="lazy">
                 </div>
