--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
         .card-text {
             text-shadow: none;
         }
-
-        font-weight: bold;
-        }
     </style>
 </head>
 
@@ -83,13 +80,14 @@
     <header class="bg-dark text-white py-4 mb-5">
         <div class="container">
             <h1 class="display-4" style="padding: 5px;">Timothy Dodge</h1>
-            <p class="lead" style="padding: 5px;">I am Timothy Dodge, an
+            <p class="lead" style="padding: 5px; font-weight: bold; text-shadow: 5px, 5px 6px rgb(0,0,0)">I am Timothy
+                Dodge, an
                 engineer with a passion for robotics, control systems, and data
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
                 contributions.</p>
-            <p style="padding: 5px;"> Contact me: <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i
-                        class="fas fa-envelope"></i>
+            <p style="padding: 5px;padding: 5px; font-weight: bold; text-shadow: 5px, 5px 6px rgb(0,0,0)"> Contact me:
+                <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
                     href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
