--- a/index.html
+++ b/index.html
@@ -90,27 +90,11 @@
                 <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
-                    href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a></p>
+                    href="https://github.com/timdodge54" class="text-white"><i class="fab fa-github"></i> GitHub</a>
+            </p>
             <a href="media/Resume_Dodge.pdf" class="btn btn-light mt-3" target="_blank">View Resume</a>
         </div>
     </header>
-    <section class="project mb-5">
-        <div class="card shadow-sm">
-            <div class="card-body">
-                <h2 class="card-title"><a href="sandia_project.html" class="text-decoration-none">Sandia National
-                        Laboratories: Pursuer-Evader
-                        Project</a></h2>
-                <p class="card-text"><strong>Technologies and Concepts:</strong> Reinforcement Learning, PyTorch,
-                    Simulink</p>
-                <div class="video mt-4">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/TNFQRwU95Wg?autoplay=1&mute=1"
-                        title="YouTube video" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen loading="lazy"></iframe>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="project mb-5">
         <div class="card shadow-sm">
@@ -132,10 +116,28 @@
     <section class="project mb-5">
         <div class="card shadow-sm">
             <div class="card-body">
-                <p class="card-text"><strong>Technologies and Concepts:</strong> Control Theory, ROS2, Python,TurtleBots
-                </p>
+                <h2 class="card-title"><a href="sandia_project.html" class="text-decoration-none">Sandia National
+                        Laboratories: Pursuer-Evader
+                        Project</a></h2>
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Reinforcement Learning, PyTorch,
+                    Simulink</p>
+                <div class="video mt-4">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/TNFQRwU95Wg?autoplay=1&mute=1"
+                        title="YouTube video" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="project mb-5">
+        <div class="card shadow-sm">
+            <div class="card-body">
                 <h2 class="card-title"><a href="epsilon_point_controller.html" class="text-decoration-none">Epsilon
                         Point Controller</a></h2>
+                <p class="card-text"><strong>Technologies and Concepts:</strong> Control Theory, ROS2, Python,TurtleBots
+                </p>
                 <div class="video mt-4">
                     <img src="media/ep.gif" alt="Epsilon Point Controller Animation" class="img-fluid" loading="lazy">
                 </div>
