--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                 science. My experience spans from microdrones and reinforcement learning to energy optimization and
                 hardware development. Welcome to my portfolio, where I showcase some of my key projects and
                 contributions.</p>
-            <p style="padding: 5px;padding: 5px; font-weight: bold; text-shadow: 5px, 5px 6px rgb(0,0,0)"> Contact me:
+            <p class="lead" style="padding: 5px;padding: 5px; font-weight: bold; text-shadow: 5px, 5px 6px rgb(0,0,0)">
+                Contact me:
                 <a href="mailto:tim.dodge64@gmail.com" class="text-white"><i class="fas fa-envelope"></i>
                     tim.dodge64@gmail.com</a> | <a href="https://www.linkedin.com/in/timothy-dodge03"
                     class="text-white"><i class="fab fa-linkedin"></i> LinkedIn</a> | <a
