adding rover background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-image: url('figures/cf_long_exposure.jpg');
+            background-image: url('figures/NASA.jpg');
             background-size: cover;
             background-position: center;
             color: rgb(255, 255, 255);
